# engineering

./: .gitignore  .latexmkrc  CLAUDE.md  Makefile  README.md  eng-macros.sty  main.tex  preamble.tex  pyproject.toml
appendices/: appA-glossary.tex  appB-units-and-constants.tex  appC-mathematical-prerequisites.tex  appD-reading-list.tex  appE-index-of-archetypes.tex
bibliography/: references.bib
docs/: case-study-template.md  citation-policy.md  diagnostic.md  editorial-decisions.md  interludes.md  open-questions.md  pilot-density-vol01-ch01.md  release-checklist.md  research-pipeline.md  review-prompt.md  reviewer-guide.md  status.md  voice.md  vol01-tier3-plan.md
docs/research/: landscape.md
docs/research/01-quantity/: _volume.md  ch01-why-we-measure.md  ch02-units-and-dimensions.md  ch03-calibration-and-traceability.md  (+6 more)
docs/reviews/: ch01-pilot-review.md  vol01-ch02-review.md  vol01-ch03-review.md  vol01-ch04-review.md  vol01-ch05-review.md  vol01-ch06-review.md  vol01-ch07-review.md  vol01-ch08-review.md  vol01-ch09-review.md
frontmatter/: cover.tex  how-to-use.tex  notation.tex  preface.tex  titlepage.tex
scripts/: generate_scaffolding.py
volumes/01-quantity/: _volume.tex
volumes/02-form/: _volume.tex
volumes/03-force/: _volume.tex
volumes/04-energy/: _volume.tex
volumes/05-matter/: _volume.tex
volumes/06-life/: _volume.tex
volumes/07-information/: _volume.tex
volumes/08-machines/: _volume.tex
volumes/09-systems/: _volume.tex
volumes/10-failure/: _volume.tex
volumes/11-design/: _volume.tex
volumes/12-civilization/: _volume.tex
(+2569 files in other folders)
