[project]
name = "engineering-tools"
version = "0.0.1"
description = "Tooling for the Engineering book project: scaffolding generation, voice/structure validation, and editorial helpers."
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

# Project tooling lives under scripts/ and tools/.
# Run any script with: uv run <path>
# The generator uses inline PEP 723 metadata so it can run standalone with `uv run scripts/generate_scaffolding.py`.
